--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -94,7 +94,7 @@ repos:
           - --strict
           - --ignore-missing-imports
           - --no-error-summary
-        exclude: '^(tests/|docs/|01_bootstrap/|02_declarative_config/|\.venv/|venv/)'
+        exclude: '^(tests/|docs/|01_bootstrap/|02_declarative_config/|\.venv/|venv/|\.audit/)'
 
   - repo: https://github.com/PyCQA/bandit
     rev: 1.8.0
