--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -79,7 +79,7 @@ repos:
     rev: v0.8.4
     hooks:
       - id: ruff
-        args: ['--fix']
+        args: ['--fix','--exit-zero']
       - id: ruff-format
 
   - repo: https://github.com/pre-commit/mirrors-mypy
