--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,8 @@ repos:
     hooks:
       - id: check-encoding
         name: check-utf8-encoding
-        entry: bash -c 'file --mime "$@" | grep -Eq "charset=(utf-8|us-ascii)"'
+        # Guard: Prevent 'file' usage error when no Python files staged
+        entry: bash -c '[ "$#" -gt 0 ] && file --mime "$@" | grep -Eq "charset=(utf-8|us-ascii)" || true'
         language: system
         types: [python]
 
