--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -95,7 +95,7 @@ repos:
           - --strict
           - --ignore-missing-imports
           - --no-error-summary
-        exclude: '^(tests/|docs/|01_bootstrap/|02_declarative_config/|\.venv/|venv/|\.audit/|\.venv-stubs/)'
+        exclude: '^(tests/|docs/|01_bootstrap/|02_declarative_config/|\.venv/|venv/|\.audit/|\.venv-stubs/|\.archive/)'
 
   - repo: https://github.com/PyCQA/bandit
     rev: 1.8.0
