fix(mypy): exclude 'templates' from strict mypy runs to avoid duplicate 'tests' module collision

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,9 @@ exclude = [
     '__pycache__',
     '\.pytest_cache',
     '\.mypy_cache',
+    "transformers",
+    "sentence-transformers",
+    'templates',
     'site-packages',
     '\.audit',
     'build',
