fix: fortress maintenance

--- a/.gitignore
+++ b/.gitignore
@@ -112,6 +112,8 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+.venv-mypy/
+.archive/
 
 # Spyder project settings
 .spyderproject
@@ -187,9 +189,26 @@ Desktop.ini
 *.log
 logs/
 
+# Gatekeeper logs (local, not committed)
+.audit/gatekeeper/*.log
+.audit/gatekeeper/push-*.log
+# Keep only metadata JSON and README
+!.audit/gatekeeper/gatekeeper-latest.json
+!.audit/gatekeeper/README.md
+
+# Backup directories (exclude from server-side Gatekeeper scanning)
+.backups/
+.backup*/
+.archive/
+venv/
+.venv/
+node_modules/
+__pycache__/
+*.egg-info/
+
 # Temporary files
 tmp/
 temp/
 05_network_migration/configs/*.json
-05_network_migration/configs/*.json
 /.backups/
+.venv-stubs/
