chore(gatekeeper): ignore backups; update gatekeeper audit and apply shfmt
- Add backup directories to .gitignore to avoid server-side gatekeeper scanning
- Update .audit/gatekeeper/gatekeeper-latest.json with sanitized audit summary
- Apply shfmt formatting to scripts (eternal-resurrect.sh)

--- a/.gitignore
+++ b/.gitignore
@@ -196,10 +196,19 @@ logs/
 !.audit/gatekeeper/gatekeeper-latest.json
 !.audit/gatekeeper/README.md
 
+# Backup directories (exclude from server-side Gatekeeper scanning)
+.backups/
+.backup*/
+.archive/
+venv/
+.venv/
+node_modules/
+__pycache__/
+*.egg-info/
+
 # Temporary files
 tmp/
 temp/
-05_network_migration/configs/*.json
 05_network_migration/configs/*.json
 /.backups/
 .venv-stubs/
