--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ requires-python = ">=3.10"
 # Pytest Configuration
 # ============================================================================
 [tool.pytest.ini_options]
-testpaths = ["tests", "templates/tests"]
+testpaths = ["tests", "templates/template_tests"]
 addopts = "-ra -v --strict-markers --tb=short"
 cache_dir = ".pytest_cache"
 markers = [
@@ -169,7 +169,7 @@ extend-ignore = [
 
 [tool.ruff.lint.per-file-ignores]
 "tests/**/*.py" = ["PT009", "PT027", "ANN", "ARG001"]
-"templates/tests/**/*.py" = ["PT009", "PT027", "ANN", "ARG001"]
+"templates/template_tests/**/*.py" = ["PT009", "PT027", "ANN", "ARG001"]
 "scripts/**/*.sh" = ["ALL"]
 "*.sh" = ["ALL"]
 
