fix(lint): extend S101 ignore to all test files — ruff compliance
- Added 'tests/**/*.py' to S101 per-file ignores
- Resolves remote CI failure on tests/unifi/test_unifi_client.py:212
- Rationale: pytest canonically uses assert statements (not security risk)
- Syncs local/remote Gatekeeper configuration

Tested: ruff check tests/ (no S101 violations)
Verified: pytest tests/ (all pass)

Fixes: Remote Gatekeeper CI failure on assert usage
Refs: S101 (assert-used)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -168,8 +168,8 @@ extend-ignore = [
 ]
 
 [tool.ruff.lint.per-file-ignores]
-"tests/**/*.py" = ["PT009", "PT027", "ANN", "ARG001"]
-"templates/template_tests/**/*.py" = ["PT009", "PT027", "ANN", "ARG001"]
+"tests/**/*.py" = ["PT009", "PT027", "ANN", "ARG001", "S101"]
+"templates/template_tests/**/*.py" = ["PT009", "PT027", "ANN", "ARG001", "S101"]
 "scripts/**/*.sh" = ["ALL"]
 "*.sh" = ["ALL"]
 
